[package]
name = "letter_box"
version = "0.5.0"
authors = ["Nathan McIntosh <Nathan.McIntosh@jhuapl.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
itertools = "0.10.0"
num-bigint = "0.2.6"
num-traits = "0.2.19"
thousands = "0.2.0"

[profile.release]
lto = true

[dev-dependencies]
rstest = "0.22.0"
